[tool.poetry]
name = "azure-keyvault-cli"
version = "0.3.3"
description = "This is a CLI to show and check secrets from an Azure KeyVault"
authors = ["mkah91 <marius_knepper@web.de>"]
repository = "https://github.com/mkah91/azure-keyvault-cli"
keywords = ["azure", "keyvault", "cli", "secrets"]
license = "MIT"
readme = "README.md"
packages = [{include = "cli"}]
exclude = ["tests", ".github"]
include = ["README.md", "pyproject.toml", "LICENSE.txt"]


[tool.poetry.scripts]
azkv = 'cli.main:azkv'

[tool.poetry.dependencies]
python = "^3.9" 
azure-identity = "^1.14.1"
inquirerpy = "^0.3.4"
azure-keyvault-secrets = "^4.7.0"
pyperclip = "^1.8.2"
toml = "^0.10.0"
click = "^8.1.3"
halo = "^0.0.31"
pydantic = "^1.10.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
mypy = "^1.1.1"
pytest-mock = "^3.10.0"
ruff = "^0.0.259"
black = ">=23.3,<25.0"
pytest-cov = "^4.0.0"

[tool.black]
line-length = 99

[tool.ruff]
line-length = 99

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
